fixing white space on long descriptions

--- a/src/web/core/admin/components/list/style.less
+++ b/src/web/core/admin/components/list/style.less
@@ -75,6 +75,7 @@
 }
 .maha-list-item-content-value {
   line-height: 1.6em;
+  white-space: normal;
   @media (min-width: 769px) {
     flex: 1;
     padding: 0.8em;
